--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,2 @@
-out
-.classpath
-.project
-.settings
-.metadata
-*.log
-*.zip
-*.class
-*.swp
-target
-classes
-build
-bin
-.idea
-.gitignore
-*.iml
+!/src
+!pom.xml
